--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,7 @@
   {% include head.html %}
 
   <body>
-
-    {% include header.html %}
-
+  <div class = "darken">
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
@@ -14,7 +12,7 @@
     </div>
 
     {% include footer.html %}
-
+  </div>
   </body>
 
 </html>
