--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,17 @@
 <header class="site-header">
 
-  <div class="wrapper">
+  <div class="wrapper2">
 
-    
+    <header class="wrapper">
+    	<h1><a href="/">{{site.title}}</a></h1>
+    </header>
 
+    <div class="wrapper">
+    	<ul class="nav">
+    	<li><a href="/">Home</a></li>
+    	<li><a href="/about/">About</a></li>
+    	</ul>
+    </div>
   </div>
 
 </header>
