--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,10 @@
 
       <div class="wrapper">
 
+         <div class="toast">
+          <p>Upload your photos <a href="http://goo.gl/fnP0q4">here</a> and look like the freakan below.</p>
+         </div>
+
          <div class="header">
           <div class="galleria">
             {% for post in site.posts %}{% if post.featured %}
