new photo added

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,4 +17,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
   <!-- Galleria -->
   <script src="/assets/scripts/galleria/galleria-1.4.2.min.js"></script>
+  <!-- Fontawesome -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 
