--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
          <div class="header">
           <div class="galleria">
             {% for post in site.posts %}{% if post.featured %}
-              <img src="/assets/images/{{post.feature}}">
+              <img src="/assets/images/{{post.feature}}" data-title="{{post.title}}" data-description="{{post.description}}">
             {% endif %}{% endfor %}
           </div>
          </div>
@@ -46,11 +46,17 @@
              </div>{% endif %}
 
              <header>
-              <h1><a href="{{ site.posts[j].url }}">{{site.posts[j].title}}</a></h1>
+              <h1><a href="{{ site.posts[j].url }}">{{site.posts[j].title}}</a> </h1>
              </header>
-
-             
-
+<!--
+             <div class="social">
+               <ul>
+                <li>Hello</li>
+                <li>Hi</li>
+                <li>yup</li>
+               </ul>
+             </div>
+-->
             </div> 
 
            {% endif %}{% assign j = j | plus: 3 %}{% endfor %}
