--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -44,6 +44,7 @@
 	margin-bottom: 50px;
 	box-shadow: rgba(0, 0, 0, 0.319608) 0px 1px 2px 0px;
 	.polaroid {
+		overflow: hidden;
 		margin: 0;
 		margin-bottom: -5px;
 		padding: 0;
@@ -74,7 +75,9 @@
 		border-top-color: #e5e5e5;
 		border-top-style: solid;
 		border-top-width: 1px;
+		display: inline;
 		a, a:active, a:visited {
+			width: 100%;
 			margin: 0;
 			padding: 15px;
 			text-decoration: none;
@@ -84,7 +87,13 @@
 		}
 		a:hover {
 			background-color: #f9f9f9;
+			border-radius: 3px;
 		}
+	}
+	.social {
+		display: inline;
+		float: right;
+		display: block;
 	}
 }
 
